# CSocketImageTest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake
client/: main.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
src/ImageTest/: imageProcess.cpp  imageProcess.h
src/Process/: Process.cpp  Process.h
src/Socket/: MySocket.cpp  MySocket.h
tools/: SVM.cpp
